# Containerization_AgenticAI_ForAutomotive

./: .env.example  .gitignore  CONTRIBUTING.md  DIAGRAMS_COMPLETE.md  QUICKSTART.md  README.md  WORKSPACE_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
agent/: __init__.py  __main__.py  api.py  cli.py  llm_interface.py  orchestrator.py  state_manager.py
argo-cd/: application.yaml  repo-creds.yaml
builders/: __init__.py  dockerfile_generator.py  image_builder.py
builders/templates/: __init__.py  generic_linux.dockerfile.j2  generic_windows.dockerfile.j2
config/: __init__.py  utils.py
config/environments/: dev.yaml  production.yaml  staging.yaml
config/tools/: canoe.yaml  generic_tool.yaml  trace32.yaml
containers/: api.dockerfile  orchestrator.dockerfile
database/: __init__.py
docs/: ADDING_NEW_TOOLS.md  API.md  ARCHITECTURE.md  GENERIC_DOCKERFILE_ARCHITECTURE.md  KUBERNETES.md  TROUBLESHOOTING.md
docs/architecture/: ARCHITECTURE_SUMMARY.md  README.md  build_flow.puml  component_interaction.puml  create_index.py  data_model.puml  deployment_flow.puml  diagrams_index.json  generate_diagrams.py  generate_diagrams_v2.py  viewer.html  (+4 more)
kubernetes/: configmap.yaml  deployment.yaml  pvc.yaml  rbac.yaml  service.yaml
scripts/: __init__.py  cleanup.py  deploy.py  init_db.py
templates/: automotive_base.dockerfile  canoe_linux.dockerfile  canoe_windows.dockerfile  trace32_linux.dockerfile  trace32_windows.dockerfile
tests/: __init__.py  test_dockerfile_generator.py  test_orchestrator.py
