[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automotive-containerization"
version = "0.1.0"
description = "Agentic AI system for building scalable Docker containers in Kubernetes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
